# OomphSC

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
source/: ConnectionButton.hpp  EditableText.hpp  Fonts.hpp  IpAndPortComponent.hpp  MonoAnalyzer.hpp  MonoStereoButton.hpp  OSCComponent.hpp  OSCSenderPlus.hpp  PeakRMSButton.hpp  PluginEditor.cpp  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.hpp  Settings.hpp  Slider.hpp  Visualizer.hpp
src/: IpAndPortComponent.hpp  OSCComponent.hpp  OSCSenderPlus.hpp  PluginEditor.cpp  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.hpp  Settings.hpp  Visualizer.hpp
